--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 node_modules
+.DS_Store
+.env
+
+.next
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+.next/cache
+.next/static
