--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
+    "@rainbow-me/rainbowkit": "^2.2.8",
     "@reown/appkit-adapter-wagmi": "^1.6.8",
     "clsx": "^2.1.1",
     "ethers": "^5.7.2",
